--- a/redis-consumer/Dockerfile
+++ b/redis-consumer/Dockerfile
@@ -1,28 +1,60 @@
-# redis-consumer/Dockerfile
+FROM ubuntu:20.04
 
-FROM ubuntu:22.04
+# Avoid prompts during package installation
+ENV DEBIAN_FRONTEND=noninteractive
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
-    build-essential cmake git wget \
-    pkg-config libssl-dev libhiredis-dev \
-    librdkafka-dev nlohmann-json3-dev
+    build-essential \
+    cmake \
+    git \
+    libssl-dev \
+    libcurl4-openssl-dev \
+    zlib1g-dev \
+    pkg-config \
+    nlohmann-json3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install redis-plus-plus from source
-RUN git clone https://github.com/sewenew/redis-plus-plus.git && \
-    cd redis-plus-plus && \
-    mkdir build && cd build && \
-    cmake .. -DREDIS_PLUS_PLUS_BUILD_STATIC=OFF && \
-    make && make install
+# Install a specific version of librdkafka
+RUN git clone https://github.com/edenhill/librdkafka.git \
+    && cd librdkafka \
+    && git checkout v2.4.0 \
+    && ./configure \
+    && make \
+    && make install \
+    && ldconfig
 
-# Create working directory
+# Install hiredis
+RUN git clone https://github.com/redis/hiredis.git \
+    && cd hiredis \
+    && make \
+    && make install \
+    && ldconfig
+
+# Install redis-plus-plus
+RUN git clone https://github.com/sewenew/redis-plus-plus.git \
+    && cd redis-plus-plus \
+    && mkdir build \
+    && cd build \
+    && cmake .. \
+    && make \
+    && make install \
+    && ldconfig
+
+# Create app directory
 WORKDIR /app
 
-# Copy code
-COPY ./src /app/src
-COPY CMakeLists.txt /app
+# Copy necessary files
+COPY redis-consumer/ /app/redis-consumer/
+COPY kafka/ /app/kafka/
 
-# Build the consumer
-RUN cmake . && make
+# Build the application
+WORKDIR /app/redis-consumer
+RUN rm -rf build && \
+    mkdir -p build && \
+    cd build && \
+    cmake .. && \
+    make
 
-CMD ["./redis_consumer"]
+# Run the application
+CMD ["./build/redis_consumer"]
